--- a/back-end-api-server/package.json
+++ b/back-end-api-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "nodemon": "^2.0.20"
   }
 }
