--- a/back-end-api-server/package.json
+++ b/back-end-api-server/package.json
@@ -12,6 +12,10 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
-    "nodemon": "^2.0.20"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
+    "promise-mysql": "^5.2.0",
+    "sql": "^0.78.0",
+    "sqlite": "^4.1.2"
   }
 }
